[package]
authors = ["Wim Looman <wim@nemo157.com>"]
name = "msgio"
version = "0.1.1"
description = "message io"
license = "MIT"
homepage = "https://iothub.cloud/"
repository = "https://github.com/OpenIoTHub/msgio-rs"

[dependencies]
bytes = "0.4.4"
futures = "0.1.14"
tokio-io = "0.1.2"
varmint = "0.1.2"
